# sonoma-labs-toolkit

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/js/: agent-example.ts
examples/rust/: agent_example.rs
js/: jest.config.js  package.json  tsconfig.json
js/src/: index.ts
js/src/core/: Agent.ts  Connection.ts  Program.rs
js/src/types/: Agent.ts  agent.ts  config.ts  index.ts
src/: lib.rs
src/agent/: autonomous_agent.rs  capabilities.rs  error.rs  mod.rs
src/network/: client.rs  mod.rs  protocol.rs
src/solana/program/: error.rs  instruction.rs  mod.rs  processor.rs  state.rs
src/storage/: mod.rs
