[package]
name = "sonoma-labs-toolkit"
version = "0.1.0"
edition = "2021"
description = "A flexible and modular framework for AI development and agent integration on Solana"
authors = ["Sonoma Labs Team"]
license = "MIT"
repository = "https://github.com/Sonoma-Labs/sonoma-labs-toolkit"

[dependencies]
solana-program = "1.17"
borsh = "0.10.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
anchor-lang = "0.28.0"
ai-interface = { version = "0.1.0", optional = true }
solana-sdk = "1.17"
solana-client = "1.17"

[lib]
name = "sonoma_labs_toolkit"
crate-type = ["cdylib", "lib"]

[features]
default = ["ai-integration"]
ai-integration = ["ai-interface"]

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.11"
